--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,7 +7,9 @@ environment:
   sdk: '>=2.15.0 <3.0.0'
 
 
-# dependencies:
+dependencies:
+  equatable: ^2.0.0
+
 #   path: ^1.8.0
 
 dev_dependencies:
