--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: csafe_fitness
 description: A dart implementation of the CSAFE protocol framework for fitness machines
 version: 0.1.0
-# homepage: https://www.example.com
+repository: https://github.com/CrewLAB/csafe-fitness
 
 environment:
   sdk: '>=2.15.0 <3.0.0'
